--- a/CodeMarble/CodeMarble.vcxproj.filters
+++ b/CodeMarble/CodeMarble.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="City.cpp">
       <Filter>Sources</Filter>
@@ -17,9 +16,6 @@
     </ClCompile>
     <ClCompile Include="LogicDavid.h">
       <Filter>Headers</Filter>
-    </ClCompile>
-    <ClCompile Include="tinyxml2.cpp">
-      <Filter>Sources</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -57,9 +53,6 @@
     <ClInclude Include="ICitySetter.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="tinyxml2.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Headers">
@@ -71,5 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="..\Resources\mapinfo.xml" />
   </ItemGroup>
 </Project>
